--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^8.2.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^4.0.1",
     "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
