--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^4.0.1",
+    "react-hot-toast": "^2.1.1",
     "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
